# Devise

./: Cargo.toml  LICENSE-APACHE
codegen/: Cargo.toml
codegen/src/: lib.rs
core/: Cargo.toml
core/src/: derived.rs  ext.rs  field.rs  generator.rs  lib.rs  meta.rs  parser.rs  spanned.rs  support.rs  variant.rs
core/src/from_meta/: meta_item.rs  mod.rs
examples/from_form/: Cargo.toml
examples/from_form/src/: lib.rs  main.rs
examples/from_form_value/: Cargo.toml
examples/from_form_value/src/: lib.rs  main.rs
examples/generics/: Cargo.toml
examples/generics/src/: lib.rs  main.rs
examples/responder/: Cargo.toml
examples/responder/src/: http_attrs.rs  lib.rs  main.rs
examples/uri_display/: Cargo.toml
examples/uri_display/src/: lib.rs  main.rs
lib/: Cargo.toml
lib/src/: lib.rs
scripts/: publish.sh
