[package]
name = "devise_codegen"
version = "0.2.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A library for devising derives and other procedural macros."
license = "MIT/Apache-2.0"
repository = "https://github.com/SergioBenitez/Devise"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
devise_core = { version = "0.2.0", path = "../core/" }
