[package]
name = "devise_core"
version = "0.3.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A library for devising derives and other procedural macros."
license = "MIT/Apache-2.0"
repository = "https://github.com/SergioBenitez/Devise"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro2-diagnostics = { git = "https://github.com/SergioBenitez/proc-macro2-diagnostics", rev = "13fbb43"}
syn = { version = "1.0", features = ["full", "parsing", "extra-traits", "visit-mut"] }
bitflags = "1.0"
