[package]
name = "devise_core"
version = "0.4.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A library for devising derives and other procedural macros."
license = "MIT/Apache-2.0"
repository = "https://github.com/SergioBenitez/Devise"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
proc-macro2-diagnostics = "0.10"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit-mut"] }
bitflags = "2.0"
