[package]
name = "devise"
version = "0.4.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "A library for devising derives and other procedural macros."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioBenitez/Devise"
readme = "../README.md"

[dependencies]
devise_core = { version = "0.4.1", path = "../core/" }
devise_codegen = { version = "0.4.1", path = "../codegen" }
