[package]
name = "responder"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
publish = false

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
quote = "0.6"
derive_utils = { path = "../../lib" }
proc-macro2 = "*"
rocket_http = { git = "https://github.com/SergioBenitez/Rocket" }

# used by main.rs
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
