[package]
name = "responder"
version = "0.2.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
publish = false

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
quote-next = "1.0.0-rc1"
devise = { path = "../../lib" }
proc-macro2-next = "1.0.0-rc1"
rocket_http = { git = "https://github.com/SergioBenitez/Rocket" }

# used by main.rs
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
