[package]
name = "uri_display"
version = "0.2.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
publish = false

[lib]
proc-macro = true

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[dependencies]
quote = "0.6"
devise = { path = "../../lib" }

# used by main.rs
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
smallvec = "*"
